ecom-all-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: all-deployment
  namespace: ecom
  labels:
    app: all
spec:
  replicas: 1
  selector:
    matchLabels:
      app: all
  template:
    metadata:
      labels:
        app: all
    spec:
      containers:
      - name: discovery
        image: ccro1307/dtest:discovery
        ports:
        - containerPort: 8761
      containers:
      - name: config
        image: ccro1307/dtest:config
        ports:
        - containerPort: 8888
      containers:
      - name: apigatewayapigateway
        image: ccro1307/dtest:apigateway
        ports:
        - containerPort: 8000
      containers:
      - name: customer
        image: ccro1307/dtest:customer
        ports:
        - containerPort: 8500
      containers:
      - name: item
        image: ccro1307/dtest:item
        ports:
        - containerPort: 8502
      containers:
      - name: order
        image: ccro1307/dtest:order
        ports:
        - containerPort: 8501
