ecom-all-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: all-service
spec:
  type: NodePort
  selector:
    app: all
  ports:  
    - port: 8000
      targetPort: 8000
      nodePort: 30701
    - port: 8761
      targetPort: 8761
      nodePort: 30700
